@@ -26,7 +26,7 @@ INCLUDES=$(DDK_INCLUDE_PATH)
 
 C_DEFINES=
 C_DEFINES=$(C_DEFINES) -DTAP_DRIVER_MAJOR_VERSION=2
-C_DEFINES=$(C_DEFINES) -DTAP_DRIVER_MINOR_VERSION=2
+C_DEFINES=$(C_DEFINES) -DTAP_DRIVER_MINOR_VERSION=3
 C_DEFINES=$(C_DEFINES) -DENABLE_RANDOM_MAC -DDISABLE_DEVICE_SHARING
 
 SOURCES=tapdrvr.c resource.rc
