@@ -17,7 +17,7 @@
    ClassGUID = {4d36e972-e325-11ce-bfc1-08002be10318}
    Provider = %l_Provider%
    Class = Net
-   DriverVer=08/02/2003,2.00.00.0002
+   DriverVer=08/02/2003,2.00.00.0003
 
 [Strings]
    l_DeviceDescription = "TAP-Win32 Adapter"
