@@ -139,7 +139,9 @@ NDIS_STATUS CreateTapDevice (TapAdapterPointer p_Adapter);
 VOID DestroyTapDevice (TapAdapterPointer p_Adapter);
 VOID HookDispatchFunctions();
 
-NTSTATUS CompleteIRP (IN PIRP p_IRP, IN TapExtensionPointer p_Extension, IN CCHAR PriorityBoost);
+NTSTATUS CompleteIRP (TapAdapterPointer p_Adapter, IN PIRP p_IRP,
+		      IN TapExtensionPointer p_Extension, IN CCHAR PriorityBoost);
+
 VOID CancelIRP (IN PDEVICE_OBJECT p_DeviceObject, IN PIRP p_IRP);
 
 VOID  MemFree  (PVOID p_Addr, ULONG p_Size);
