@@ -2,7 +2,7 @@
 OpenVPN
 Copyright (C) 2002-2003 James Yonan <jim@yonan.net>
 
-$Id: ChangeLog,v 1.86.2.9 2003/08/14 18:50:58 jimyonan Exp $
+$Id: ChangeLog,v 1.86.2.10 2003/08/16 23:16:34 jimyonan Exp $
 	
 Upcoming version 1.5.0
 
@@ -93,6 +93,9 @@ Upcoming version 1.5.0
   and right-clickability for .ovpn
   files (OpenVPN config files)
   (beta5).
+* Fixed TAP-Win32 driver to properly
+  increment the Rx/Tx count. 
+  (beta6).
 * Protocol compatibility is maintained
   with the 1.4.x and 1.3.x series.
   If you are connecting to a 1.3.x peer,
